# rust-release-action

./: .gitignore  CONTRIBUTING.md  MIGRATION_V3.md  NPM_PUBLISHING.md  README.md  action.yml
.github/workflows/: npm-publish.yml  reusable-rust-release.yml  rust-release.yml
docs/: DEPENDENCIES.md  MIGRATION_V3.md  NPM_PUBLISHING.md  SECURITY_IMPROVEMENTS.md  TESTING.md
examples/: advanced-usage.yml  advanced.yml  basic-usage.yml  custom-platforms.yml  npm-publish-usage.yml  selective-platforms.yml  simple-usage.yml  with-npm.yml  workflow-usage.yml
scripts/: create-checksums.sh  generate-install-script.sh  generate-matrix.sh  package-assets.sh  package-release.sh  secure-build.sh  setup-cross-compilation.sh  validate-inputs.sh
templates/: install-unix-secure.sh.template  install-unix.sh.template  install-windows-secure.ps1.template  install-windows.ps1.template
test/: run-tests.sh  test-scripts.sh  test-security.sh  test-workflow.sh
test/test-project/: Cargo.toml  README.md  config.json
test/test-project/src/: main.rs
test/workflows/: rust-release-simple.yml  test-simple.yml
