[package]
name = "test-rust-app"
version = "0.1.0"
edition = "2021"
description = "A simple test Rust application for testing the GitHub Actions workflow"
authors = ["Test User <test@example.com>"]
license = "MIT"
repository = "https://github.com/xctions/rust-release"
homepage = "https://github.com/xctions/rust-release"
readme = "README.md"
keywords = ["cli", "test", "example"]
categories = ["command-line-utilities"]

[[bin]]
name = "test-rust-app"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]
full = ["async"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true